[package]
name = "image_scrapper"
version = "0.1.0"
authors = ["Sree Theja <msreetheja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
infer = "0.1.6"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"